# django-prose-editor

./: .eslintrc.js  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.rst  LICENSE  README.rst  biome.json  esbuild.js  esbuild.mjs  main.css  main.js  package.json  postcss.config.js  pyproject.toml  rslib.config.mjs  tox.ini  tsconfig.json  update.sh
.github/workflows/: playwright.yml  tests.yml
django_prose_editor/: __init__.py  apps.py  checks.py  config.py  configurable.py  fields.py  sanitized.py  widgets.py
django_prose_editor/locale/de/LC_MESSAGES/: django.mo  django.po  djangojs.mo  djangojs.po
django_prose_editor/static/django_prose_editor/: 360.js  478.js  917.js  930.js  930.js.map  code.js  configurable.js  configurable.js.map  default.js  default.js.map  editor.css  editor.css.map  editor.js  editor.js.map  ext-code.js  ext-style.js  ext-tables.js  init.js  material-icons.css  material-icons.css.map  overrides.css  overrides.css.map  overrides.js  style.js  tables.js
docs/: bundlers.rst  conf.py  configuration.rst  configuration_language.rst  custom_extensions.rst  development.rst  forms.rst  index.rst  installation.rst  legacy.rst  menu.rst  nodeclass.rst  presets.rst  sanitization.rst  system_checks.rst  textclass.rst
scripts/: setup_playwright.py
src/: commands.js  commands.mjs  dialog.css  editor.css  editor.js  editor.mjs  editor.ts  ext-code.js  extendMarkRange.js  figure.js  figure.ts  fullscreen.css  fullscreen.js  fullscreen.ts  history.js  horizontalRule.js  horizontalRule.ts  html.js  html.ts  index.js  init.js  keymap.js  keymap.mjs  library-tables.js  library-textstyle.js  library.js  link.js  link.ts  locale  material-icons.css  menu-utils.js  menu.css  menu.js  menu.mjs  menu.ts  nodeClass.js  nospellcheck.js  nospellcheck.mjs  nospellcheck.ts  orderedList.js  (+12 more)
src/utils/: canInsertNode.js  canInsertNode.ts
tests/: README.md  conftest.py
tests/testapp/: admin.py  models.py  settings.py  test_checks.py  test_config.py  test_configurable.py  test_editor_destroy.py  test_form_field.py  test_playwright.py  test_prose_editor.py  test_prose_editor_e2e.py  urls.py
tests/testapp/static/: table.js
tests/testapp/static/testapp/: blue-bold.js
tests/testapp/templates/: editor.html  menu_test.html
